Work in progress

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           Fragen kannst du dich natürlich gerne mit uns in Verbindung setzen.
         </p>
       </section>
-      <section id="section_thermik">
+      <section>
         <h3 id="thermiktraining">Thermiktraining</h3>
         <div id="flex_container_thermik">
           <div id="flex_item_thermik_1">
@@ -72,26 +72,60 @@
           </div>
         </div>
       </section>
-      <section id="flex_container_thermik">
-        <div id="flex_item_thermik_1">
-          <p>
-            Welcher Pilot liebt es nicht? Thermikfliegen ist eine
-            unbeschreibliche Erfahrung! Fast wie durch Zauberhand steigt man mit
-            dem Gleitschirm immer weiter nach oben. Ist die Thermik erst einmal
-            zentriert, geht es permanent und konstant nach oben - bis zur
-            Wolkenbasis! Flüge über 3.000m sind keine Seltenheit. Damit das auch
-            klappt muss man schon einiges an Wissen haben: Wo finde ich die
-            Thermik? Wie verhalte ich mich in der Thermik? Mit welchen Gefahren
-            muss ich als Pilot rechnen? Wie reagiere ich auf Turbulenzen?<br />
-            Das ist zugegeben schon einiges! Aber dafür gibt es diesen Kurs.
-            Hier erlernst du die Grundlagen des Thermikfliegens, erwirbst das
-            theoretische Grundwissen und setzt dieses unter Anleitung von
-            erfahrenen Piloten in die Praxis um!<br />
-            Bring deine Fähigkeiten auf ein neues Level!
-          </p>
+      <section>
+        <h3 id="start_lande_training">Start- und Landetraining</h3>
+        <div id="flex_container_slt">
+          <div id="flex_item_slt_1">
+            <p>
+              <img
+                id="slt_text_bild"
+                src="media/start_lande_training_1.jpg"
+                alt="Landen"
+              />
+              Starten und Landen mit dem Gleitschirm. Kann doch eh jeder,
+              oder?<br />
+
+              Falsch gedacht! Gerade Start und Landung sind die
+              anspruchsvollsten Phasen des Fliegens. Und hier passieren
+              erwiesenermaßen die meisten Unfälle! Piloten starten oft
+              schlampig, kontrollieren den Schirm nicht ausreichend und wählen
+              die falsche Starttechnik, weil sie nur eine beherrschen. Bei den
+              Landungen verhält es sich ähnlich - Landemanöver werden schlampig
+              ausgeführt, der Wind wird zu wenig beachtet und der Endanflug ist
+              oft viel zu schnell. <br />
+
+              Hier kommen wir ins Spiel. Wir lernen dir verschiedene Start- und
+              Landetechniken, damit du in jeder Situation, an jedem Startplatz
+              und an jedem Landeplatz sicher unterwegs bist!<br />
+              Bring deine Fähigkeiten auf ein neues Level!
+            </p>
+          </div>
         </div>
-        <div id="flex_item_thermik_2">
-          <img src="media/thermiktraining_1.jpg" alt="Thermiktraining" />
+      </section>
+      <section>
+        <h3 id="thermiktraining">Thermiktraining</h3>
+        <div id="flex_container_thermik">
+          <div id="flex_item_thermik_1">
+            <p>
+              Welcher Pilot liebt es nicht? Thermikfliegen ist eine
+              unbeschreibliche Erfahrung! Fast wie durch Zauberhand steigt man
+              mit dem Gleitschirm immer weiter nach oben. Ist die Thermik erst
+              einmal zentriert, geht es permanent und konstant nach oben - bis
+              zur Wolkenbasis! Flüge über 3.000m sind keine Seltenheit. Damit
+              das auch klappt muss man schon einiges an Wissen haben: Wo finde
+              ich die Thermik? Wie verhalte ich mich in der Thermik? Mit welchen
+              Gefahren muss ich als Pilot rechnen? Wie reagiere ich auf
+              Turbulenzen?<br />
+              Das ist zugegeben schon einiges! Aber dafür gibt es diesen Kurs.
+              Hier erlernst du die Grundlagen des Thermikfliegens, erwirbst das
+              theoretische Grundwissen und setzt dieses unter Anleitung von
+              erfahrenen Piloten in die Praxis um!<br />
+              Bring deine Fähigkeiten auf ein neues Level!
+            </p>
+          </div>
+          <div id="flex_item_thermik_2">
+            <img src="media/thermiktraining_1.jpg" alt="Thermiktraining" />
+          </div>
         </div>
       </section>
     </article>
