--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
         </div>
       </section>
     </article>
-    <footer></footer>
+    <footer>
+        <p>Designed by C. Reisenauer</p>
+    </footer>
   </main>
 </html>
