--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
     <link rel="stylesheet" href="styles/main-style.css" />
     <link rel="stylesheet" href="styles/flexboxes.css" />
+    <link rel="stylesheet" href="styles/media_queries.css">
   </head>
   <main>
     <header id="start">
@@ -81,6 +82,8 @@
           </div>
         </div>
       </section>
+      <div id="site_divider">
+      </div>
       <section>
         <h3 id="start_lande_training">Start- und Landetraining</h3>
         <div id="flex_container_slt">
@@ -112,6 +115,8 @@
           </div>
         </div>
       </section>
+      <div id="site_divider_2">
+      </div>
       <section>
         <h3 id="gebirgstraining">Gebirgsflugtraining</h3>
         <div id="flex_container_gft">
